--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -13,6 +13,7 @@
     <p>css</p>
     <p>javascript</p>
     <p>node.js </p>
+    <a href="link https://i.ibb.co/gTDZZT8/ALX-Logo-07.png "> <img src="link https://i.ibb.co/gTDZZT8/ALX-Logo-07.png " alt="ALX-Logo-07"></a>
     
 </body>
 </html>
