--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -16,4 +16,6 @@
   <main>
     <article>
       <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">oyinlade aramide<br>— Elon Musk (@elonmusk) <a href="https://twitter.com/elonmusk/status/1234567890123456789">March 1, 2020</a
+        <p lang="en" dir="ltr">oyinlade aramide<br>— Elon Musk (@elonmusk) <a href="https://twitter.com/elonmusk/status/1234567890123456789">March 1, 2020</a>    
+</body>
+</html>
