add all changes

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
     <h1>my first webpage</h1>
     <h2>my first webpage</h2>
     <h3>my first webpage</h3>
