add all changes

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -12,6 +12,8 @@
       <li><a href="tweets.html">Tweets</a></li>
     </ul>
   </header>
+  <main>
+    <article>
     <h1>my first webpage</h1>
     <h2>my first webpage</h2>
     <h3>my first webpage</h3>
@@ -20,6 +22,13 @@
     <p>javascript</p>
     <p>node.js </p>
     <a href="link https://i.ibb.co/gTDZZT8/ALX-Logo-07.png "> <img src="link https://i.ibb.co/gTDZZT8/ALX-Logo-07.png " alt="ALX-Logo-07"></a>
-    
+    </article>
+    <aside>
+    <p>placeholder to add comment thread later</p>
+</aside>
+        </main>     
+        <footer>
+    <p>Made by oyinlade aramide - <a href="https://your-profile-link.com" target="_blank">here</a>.</p>
+  </footer>  
 </body>
 </html>
