--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -17,7 +17,12 @@
     <article>
       <blockquote class="twitter-tweet">
         <p lang="en" dir="ltr">oyinlade aramide<br>— Elon Musk (@elonmusk) <a href="https://twitter.com/elonmusk/status/1234567890123456789">March 1, 2020</a>    
-
-        </main>       
+<aside>
+    <p>placeholder to add comment thread later</p>
+</aside>
+        </main>     
+        <footer>
+    <p>Made by oyinlade aramide - <a href="https://your-profile-link.com" target="_blank">here</a>.</p>
+  </footer>  
      </body>
 </html>
