--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -16,13 +16,18 @@
   <main>
     <article>
       <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">oyinlade aramide<br>— Elon Musk (@elonmusk) <a href="https://twitter.com/elonmusk/status/1234567890123456789">March 1, 2020</a>    
-<aside>
-    <p>placeholder to add comment thread later</p>
-</aside>
-        </main>     
-        <footer>
-    <p>Made by oyinlade aramide - <a href="https://your-profile-link.com" target="_blank">here</a>.</p>
-  </footer>  
-     </body>
+        <p lang="en" dir="ltr">This is an example tweet you can replace with your own!<br>— Elon Musk (@elonmusk) <a href="https://twitter.com/elonmusk/status/1234567890123456789">March 1, 2020</a></p>
+      </blockquote>
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </article>
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by Uduakobong Godwin - <a href="https://your-profile-link.com" target="_blank">here</a>.</p>
+  </footer>
+</body>
 </html>
