add all changes

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -40,9 +40,9 @@
     </article>
 
     <article class="project">
-      <h3>Task Tracker App</h3>
-      <p>A simple task tracking app built with HTML, CSS, and JavaScript.</p>
-      <a href="https://github.com/yourusername/task-tracker" target="_blank">View on GitHub</a>
+      <h3>telemedicine app</h3>
+      <p>An app designed using figma to help people in the rural area to get medical help</p>
+      <a href="https://github.com/yourusername/telemedicine" target="_blank">View on GitHub</a>
     </article>
 
   </section>
@@ -50,7 +50,13 @@
   <!-- About Me Section -->
   <section id="about">
     <h2>About Me</h2>
-    <p>I started my journey into tech in 2019, inspired by the challenges in my community. With a strong interest in problem-solving and creativity, I decided to become a developer. I have a background in biology and I'm currently honing my skills in HTML, CSS, and JavaScript through the ALX Frontend Development program.</p>
+    <p>a passionate and purpose-driven junior front-end developer with a love for building simple, user-friendly web experiences that make life a little easier and a lot more enjoyable.
+
+Currently learning with the ALX Front-End Web Development Program, I'm diving deep into HTML, CSS, JavaScript, and React, while developing projects that reflect real-world impact , like a basic health checker app and more ideas to come.
+
+My strengths? I’m great at breaking down problems, adapting to new tools, learning fast, and always open to feedback. My background in graphic design, project management, and fashion design*brings creativity and structure to everything I build.
+
+I believe tech should be meaningful, accessible, and fun. I’m on a mission to grow into a software engineer who builds for impact and to become the best version of myself along the way. .</p>
     <p>Skills: HTML, CSS, JavaScript, Git, Sass, Responsive Design</p>
     <p>Hobbies: Coding, Reading, Music, Volunteering</p>
   </section>
@@ -59,15 +65,15 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>
-      Email: <a href="mailto:adejarefaruk@example.com">adejarefaruk@example.com</a><br>
-      LinkedIn: <a href="https://www.linkedin.com/in/your-link" target="_blank">View Profile</a><br>
-      GitHub: <a href="https://github.com/yourusername" target="_blank">View Projects</a>
+      Email: <a href="mailto:aramideayomide960@gmail.com">aramideayomide960@gmail.com</a><br>
+      LinkedIn: <a href="https://www.linkedin.com/in/oyinlade-aramide-44213030b/" target="_blank">View Profile</a><br>
+      GitHub: <a href="https://github.com/arami114" target="_blank">View Projects</a>
     </p>
   </section>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2024 Adejare Faruk Ayomikun</p>
+    <p>&copy; 2024 oyinlade aramide</p>
   </footer>
 
 </body>
