--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -27,7 +27,7 @@
   </main>
 
   <footer>
-    <p>Made by Uduakobong Godwin - <a href="https://your-profile-link.com" target="_blank">here</a>.</p>
+    <p>Made by oyinlade aramide - <a href="https://your-profile-link.com" target="_blank">here</a>.</p>
   </footer>
 </body>
 </html>
