add all changes

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>personal portfolio</title>
 </head>
 <body>
 
-  <!-- Header -->
   <header>
     <h1>Oyinlade Aramide</h1>
     <p>Software Developer| Frontend Developer | Passionate Learner</p>
