add all changes

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,71 +9,54 @@
 
   <header>
     <h1>Oyinlade Aramide</h1>
-    <p>Software Developer| Frontend Developer | Passionate Learner</p>
+    <p>Software Developer | Frontend Developer</p>
   </header>
-
-  <!-- Navigation -->
   <nav>
     <ul>
-      <li><a href="#introduction">Introduction</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#about">About Me</a></li>
-      <li><a href="#contact">Contact</a></li>
+        <li><a href="#Introduction">Introduction</a></li>
+        <li><a href="#Projects">Projects</a></li>
+        <li><a href="#About Me">About Me</a></li>
+        <li><a href="Contacts">Contacts</a></li>
     </ul>
   </nav>
-
-  <!-- Introduction Section -->
-  <section id="introduction">
+  <section id="Introduction">
     <h2>Introduction</h2>
-    <p>Hello! I'm Oyinlade Aramide, an aspiring Frontend Developer passionate about building interactive and user-friendly web applications. I enjoy learning new technologies and solving real-world problems through code.</p>
-  </section>
-
-  <!-- Projects Section -->
-  <section id="projects">
+    <P>Hi, I’m Oyinlade Aramide — a front-end developer with a passion for building user-friendly web applications that create real impact. I’m driven by a love for tech, creativity, and purpose, with a goal to help solve real-world challenges like job creation and limited access to technology in Nigeria. When I’m not coding, you’ll find me reading, watching anime, or exploring the exciting world of Web3. My faith keeps me grounded, and I live by Philippians 4:13 — “I can do all things through Christ who strengthens me.”</P>
+ </section>
+<section id="Projects">
     <h2>Projects</h2>
+<article class="project">
+    <h3>My portfolio website</h3>
+    <p>my personal portfolio website showcasing all my background, projects, and contact information.</p>
+    <a href="https://yourportfolio.live" target="_blank">view my portfolio</a>
+</article>
+<article class="project">
+    <h3>telemedcine app</h3>
+    <p> a simple telemedcine app disigned using figma and built using html, css, and javascript</p>
+    <a href="https://github.com/arami114/telemedcine app" target="_blank">view on my github</a>
+</article>
+</section>
 
-    <article class="project">
-      <h3>My Portfolio Website</h3>
-      <p>A personal portfolio website showcasing my background, projects, and contact information.</p>
-      <a href="https://yourportfolio.live" target="_blank">View Project</a>
-    </article>
+<section id="About">
+<h2>About Me</h2>
+<p>Hi, I’m Oyinlade Aramide  a front-end developer passionate about building user-friendly web applications that solve real problems and create meaningful experiences. I enjoy turning ideas into beautiful, functional websites, and I love starting projects from scratch and watching them come to life.
+My journey into tech began with a desire to make a difference, especially in areas like job creation and access to technology in Nigeria. One of my most impactful projects was working with a team to build a telemedicine app, designed to connect people in rural communities with healthcare professionals and bridge the digital divide.
 
-    <article class="project">
-      <h3>telemedicine app</h3>
-      <p>An app designed using figma to help people in the rural area to get medical help</p>
-      <a href="https://github.com/yourusername/telemedicine" target="_blank">View on GitHub</a>
-    </article>
+Outside of tech, I’m a big fan of anime, a lover of books, and someone who finds joy in creativity and exploration—whether it’s online or in everyday life. I’m also exploring Web3 and how decentralized tech can empower communities. Guided by my faith, I live by Philippians 4:13: *“I can do all things through Christ who strengthens me.”</p>
+<p>skills: html, css, javascript, nodes.js, git and github</p>
+<p>hobbies: reading, watchibg movies, coding.</p>
+</section>
 
-  </section>
-
-  <!-- About Me Section -->
-  <section id="about">
-    <h2>About Me</h2>
-    <p>a passionate and purpose-driven junior front-end developer with a love for building simple, user-friendly web experiences that make life a little easier and a lot more enjoyable.
-
-Currently learning with the ALX Front-End Web Development Program, I'm diving deep into HTML, CSS, JavaScript, and React, while developing projects that reflect real-world impact , like a basic health checker app and more ideas to come.
-
-My strengths? I’m great at breaking down problems, adapting to new tools, learning fast, and always open to feedback. My background in graphic design, project management, and fashion design*brings creativity and structure to everything I build.
-
-I believe tech should be meaningful, accessible, and fun. I’m on a mission to grow into a software engineer who builds for impact and to become the best version of myself along the way. .</p>
-    <p>Skills: HTML, CSS, JavaScript, Git, Sass, Responsive Design</p>
-    <p>Hobbies: Coding, Reading, Music, Volunteering</p>
-  </section>
-
-  <!-- Contact Section -->
-  <section id="contact">
+ <section id="contact">
     <h2>Contact</h2>
     <p>
-      Email: <a href="mailto:aramideayomide960@gmail.com">aramideayomide960@gmail.com</a><br>
+      Email: <a href="mailto:aramideoyinlade960@gmail.com">aramideoyinlade960@gmail.com</a><br>
       LinkedIn: <a href="https://www.linkedin.com/in/oyinlade-aramide-44213030b/" target="_blank">View Profile</a><br>
-      GitHub: <a href="https://github.com/arami114" target="_blank">View Projects</a>
+      GitHub: <a href="https://github.com/arami" target="_blank">View Projects</a>
     </p>
   </section>
-
-  <!-- Footer -->
   <footer>
-    <p>&copy; 2024 oyinlade aramide</p>
+    <p>&copy; 2024 Oyinlade Aramide Ayomide</p>
   </footer>
-
 </body>
 </html>
