add all changes

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,62 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>personal portfolio</title>
+  <meta charset="utf-8">
+  <title>Adejare Faruk Ayomikun - Personal Portfolio</title>
 </head>
 <body>
 
+  <!-- Header -->
   <header>
-    <h1>Oyinlade Aramide</h1>
-    <p>Software Developer | Frontend Developer</p>
+    <h1>Adejare Faruk Ayomikun</h1>
+    <p>Frontend Developer | Creative Problem Solver | Passionate Learner</p>
   </header>
+
+  <!-- Navigation -->
   <nav>
     <ul>
-        <li><a href="#Introduction">Introduction</a></li>
-        <li><a href="#Projects">Projects</a></li>
-        <li><a href="#About Me">About Me</a></li>
-        <li><a href="Contacts">Contacts</a></li>
+      <li><a href="#introduction">Introduction</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#about">About Me</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
-  <section id="Introduction">
+
+  <!-- Introduction Section -->
+  <section id="introduction">
     <h2>Introduction</h2>
-    <P>Hi, I’m Oyinlade Aramide — a front-end developer with a passion for building user-friendly web applications that create real impact. I’m driven by a love for tech, creativity, and purpose, with a goal to help solve real-world challenges like job creation and limited access to technology in Nigeria. When I’m not coding, you’ll find me reading, watching anime, or exploring the exciting world of Web3. My faith keeps me grounded, and I live by Philippians 4:13 — “I can do all things through Christ who strengthens me.”</P>
- </section>
-<section id="Projects">
+    <p>Hello! I'm Adejare Faruk Ayomikun, an aspiring Frontend Developer passionate about building interactive and user-friendly web applications. I enjoy learning new technologies and solving real-world problems through code.</p>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects">
     <h2>Projects</h2>
-<article class="project">
-    <h3>My portfolio website</h3>
-    <p>my personal portfolio website showcasing all my background, projects, and contact information.</p>
-    <a href="https://yourportfolio.live" target="_blank">view my portfolio</a>
-</article>
-<article class="project">
-    <h3>telemedcine app</h3>
-    <p> a simple telemedcine app disigned using figma and built using html, css, and javascript</p>
-    <a href="https://github.com/arami114/telemedcine app" target="_blank">view on my github</a>
-</article>
-</section>
 
-<section id="About">
-<h2>About Me</h2>
-<p>Hi, I’m Oyinlade Aramide  a front-end developer passionate about building user-friendly web applications that solve real problems and create meaningful experiences. I enjoy turning ideas into beautiful, functional websites, and I love starting projects from scratch and watching them come to life.
-My journey into tech began with a desire to make a difference, especially in areas like job creation and access to technology in Nigeria. One of my most impactful projects was working with a team to build a telemedicine app, designed to connect people in rural communities with healthcare professionals and bridge the digital divide.
+    <article class="project">
+      <h3>My Portfolio Website</h3>
+      <p>A personal portfolio website showcasing my background, projects, and contact information.</p>
+      <a href="https://yourportfolio.live" target="_blank">View Project</a>
+    </article>
 
-Outside of tech, I’m a big fan of anime, a lover of books, and someone who finds joy in creativity and exploration—whether it’s online or in everyday life. I’m also exploring Web3 and how decentralized tech can empower communities. Guided by my faith, I live by Philippians 4:13: *“I can do all things through Christ who strengthens me.”</p>
-<p>skills: html, css, javascript, nodes.js, git and github</p>
-<p>hobbies: reading, watchibg movies, coding.</p>
-</section>
+    <article class="project">
+      <h3>Task Tracker App</h3>
+      <p>A simple task tracking app built with HTML, CSS, and JavaScript.</p>
+      <a href="https://github.com/yourusername/task-tracker" target="_blank">View on GitHub</a>
+    </article>
 
- <section id="contact">
+  </section>
+
+  <!-- About Me Section -->
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I started my journey into tech in 2019, inspired by the challenges in my community. With a strong interest in problem-solving and creativity, I decided to become a developer. I have a background in biology and I'm currently honing my skills in HTML, CSS, and JavaScript through the ALX Frontend Development program.</p>
+    <p>Skills: HTML, CSS, JavaScript, Git, Sass, Responsive Design</p>
+    <p>Hobbies: Coding, Reading, Music, Volunteering</p>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
     <h2>Contact</h2>
     <p>
-      Email: <a href="mailto:aramideoyinlade960@gmail.com">aramideoyinlade960@gmail.com</a><br>
-      LinkedIn: <a href="https://www.linkedin.com/in/oyinlade-aramide-44213030b/" target="_blank">View Profile</a><br>
-      GitHub: <a href="https://github.com/arami" target="_blank">View Projects</a>
+      Email: <a href="mailto:adejarefaruk@example.com">adejarefaruk@example.com</a><br>
+      LinkedIn: <a href="https://www.linkedin.com/in/your-link" target="_blank">View Profile</a><br>
+      GitHub: <a href="https://github.com/yourusername" target="_blank">View Projects</a>
     </p>
   </section>
+
+  <!-- Footer -->
   <footer>
-    <p>&copy; 2024 Oyinlade Aramide Ayomide</p>
+    <p>&copy; 2024 Adejare Faruk Ayomikun</p>
   </footer>
+
 </body>
 </html>
