add all changes

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Adejare Faruk Ayomikun - Personal Portfolio</title>
+  <title>Oyinlade Aramide Ayomide- Personal Portfolio</title>
 </head>
 <body>
 
   <!-- Header -->
   <header>
-    <h1>Adejare Faruk Ayomikun</h1>
+    <h1>Oyinlade Aramide Ayomide</h1>
     <p>Frontend Developer | Creative Problem Solver | Passionate Learner</p>
   </header>
 
@@ -25,7 +25,7 @@
   <!-- Introduction Section -->
   <section id="introduction">
     <h2>Introduction</h2>
-    <p>Hello! I'm Adejare Faruk Ayomikun, an aspiring Frontend Developer passionate about building interactive and user-friendly web applications. I enjoy learning new technologies and solving real-world problems through code.</p>
+    <p>Hello! I'm oyinlade aramide, an aspiring Frontend Developer passionate about building interactive and user-friendly web applications. I enjoy learning new technologies and solving real-world problems through code.</p>
   </section>
 
   <!-- Projects Section -->
@@ -58,7 +58,7 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>
-      Email: <a href="mailto:adejarefaruk@example.com">adejarefaruk@example.com</a><br>
+      Email: <a href="mailto:aramideoyinlade960@com">aramideoyinlade9602@gmail.com</a><br>
       LinkedIn: <a href="https://www.linkedin.com/in/your-link" target="_blank">View Profile</a><br>
       GitHub: <a href="https://github.com/yourusername" target="_blank">View Projects</a>
     </p>
@@ -66,7 +66,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2024 Adejare Faruk Ayomikun</p>
+    <p>&copy; 2023 Oyinlade Aramide Ayomide</p>
   </footer>
 
 </body>
